--- a/module-7-project1/app.css
+++ b/module-7-project1/app.css
@@ -11,9 +11,7 @@ body {
 }
 
 .project-head{
-  max-width: 700px;
   text-align: center;
-  margin: 20px auto;
 }
 
 label,
@@ -97,6 +95,7 @@ button:active {
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.26);
   padding: 1rem;
   margin: 1rem;
+  background: white;
 }
 
 .projects li h2 {
